--- a/nn_test_work.ipynb
+++ b/nn_test_work.ipynb
@@ -1713,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 389,
    "id": "ff6138d4-c722-41aa-a0e8-7894e7793f77",
    "metadata": {},
    "outputs": [
@@ -1721,17 +1721,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.0099493]\n",
-      "[0.9484714]\n",
-      "[0.94633084]\n",
-      "[0.94953965]\n"
+      "[0.09945178]\n",
+      "[0.89660589]\n",
+      "[0.90365085]\n",
+      "[0.34888709]\n",
+      "Num of layers:  3\n",
+      "# 0\n",
+      "IN LAYER\n",
+      "size:  2\n",
+      "[0. 0.]\n",
+      "\n",
+      "# 1\n",
+      "my size:  2\n",
+      "w:  [[6.65347109 0.73680793]\n",
+      " [6.76039077 0.7547229 ]] \n",
+      "\n",
+      "\n",
+      "# 2\n",
+      "my size:  1\n",
+      "w:  [[ 16.18623132]\n",
+      " [-20.59289297]] \n",
+      "\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "test_2_in = [[0,0], [0,1], [1, 0], [1,1]]\n",
     "for i in range(4):\n",
-    "    print(pnn.forward(test_2_in[i]))"
+    "    print(pnn.forward(test_2_in[i]))\n",
+    "\n",
+    "pnn.print_info()"
    ]
   }
  ],
