что-то странное

--- a/RL_for_real.ipynb
+++ b/RL_for_real.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "4f44551d-6c82-408e-8a61-c697283fca1e",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,8 @@
     "import random\n",
     "import gymnasium as gym\n",
     "from collections import deque\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import copy"
    ]
   },
   {
@@ -70,39 +71,49 @@
   {
    "cell_type": "markdown",
    "id": "468c5cad-7cbb-487a-bdea-f04ecc392b21",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## actiovations and derivatives"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "id": "b8bb2e0a-f901-4f71-8073-3338077482a3",
    "metadata": {},
    "outputs": [],
    "source": [
     "def Sigmoid(x):\n",
-    "    return 1 / (1 + np.exp(-x))\n",
-    "    \n",
-    "def ReLU(x):\n",
-    "    return max(0,x.all())\n",
+    "    #print(\"sig before: \", x)\n",
+    "    res = 1 / (1 + np.exp(-x))\n",
+    "    #print(\"sig after: \", res)\n",
+    "    return res\n",
     "\n",
     "def d_Sigmoid(x):\n",
-    "    return x * (1 - x)\n",
+    "    #print(\"d sig before: \", x)\n",
+    "    y = x * (1 - x)\n",
+    "    #print(\"d sig after: \", y)\n",
+    "    return y\n",
+    "\n",
+    "\n",
+    "def ReLU(x):\n",
+    "    for each in x:\n",
+    "        each = max(0, each)\n",
+    "    return x\n",
     "    \n",
     "def d_ReLU(x):\n",
-    "    if (x) < 0:\n",
-    "        return 0\n",
-    "    else:\n",
-    "        return 1\n",
+    "    for each in x:\n",
+    "        if (each <= 0):\n",
+    "            each = 0\n",
+    "        else:\n",
+    "            each = 1\n",
+    "    return x\n",
+    "\n",
     "\n",
     "activations_dict = {\n",
     "'Sigmoid': [Sigmoid, d_Sigmoid],\n",
     "'ReLU': [ReLU, d_ReLU],  \n",
-    "}"
+    "}\n"
    ]
   },
   {
@@ -115,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "cafe7099-43e6-40d7-86cf-b1584e840e57",
    "metadata": {},
    "outputs": [],
@@ -218,16 +229,14 @@
   {
    "cell_type": "markdown",
    "id": "5c8c3f4b-e837-447f-bc2b-913c4b6eb44c",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## NN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "091f378e-658f-4047-9fc1-8a594be1405e",
    "metadata": {},
    "outputs": [],
@@ -239,13 +248,17 @@
     "        s.n_of_layers = 0\n",
     "        \n",
     "        pass\n",
+    "        \n",
+    "    def deep_copy(s):\n",
+    "        return copy.deepcopy(s)\n",
     "\n",
     "    def forward(s, data):\n",
     "        for lay in layers:\n",
     "            data = lay.forward(data)\n",
     "        s.last_result = data\n",
     "        return s.last_result\n",
-    "\n",
+    "        \n",
+    "    \n",
     "    def backprop(s, correct):\n",
     "        err = correct-s.last_result\n",
     "\n",
@@ -258,7 +271,6 @@
     "\n",
     "    def learn_one(s, in_data, target_data):\n",
     "        pnn.forward(in_data)\n",
-    "\n",
     "        pnn.backprop(target_data)\n",
     "        pnn.update_w()   \n",
     "        \n",
@@ -331,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "79217bd1-1e66-4ec1-93b3-2347fbcbbec3",
    "metadata": {},
    "outputs": [],
@@ -358,7 +370,7 @@
     "        s.memory.clear()\n",
     "\n",
     "    def get_sample(s, sample_size):\n",
-    "        return random.sample(s.memry, sample_size)\n",
+    "        return random.sample(s.memory, sample_size)\n",
     "\n",
     "    def __len__(s):\n",
     "        return len(s.memory)\n",
@@ -384,20 +396,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 7,
    "id": "3a470522-2e89-464d-9d5e-5b1746ec1358",
    "metadata": {},
    "outputs": [],
    "source": [
+    "bar_len = 50\n",
+    "\n",
+    "def display_bar(bar_len, idx, total):\n",
+    "    idx = int(idx*bar_len/total)\n",
+    "    #print(perc)\n",
+    "    print(\"[\", \"-\"*idx, \"*\", \"-\"*(bar_len-idx-1), \"]\",end='')\n",
+    "    print(\"\\r\",end='')\n",
+    "\n",
     "class test_env():\n",
     "    def __init__(s, env_name, render_mode = ''): \n",
+    "        s.reward_discount = 0.99 #gamma\n",
+    "        \n",
     "        s.brain = plastic_nn()\n",
     "        \n",
     "        s.render_mode = render_mode\n",
-    "        s.env = gym.make(env_name, render_mode=\"human\")\n",
+    "        s.env = gym.make(env_name)#, render_mode=\"human\")\n",
     "    \n",
-    "        s.memory = replay_memory(10)\n",
-    "        s.explore_prob = 0.5 # epsilon\n",
+    "        s.memory = replay_memory(maxlen=10000)\n",
+    "        s.explore_prob = 0.85 # epsilon\n",
+    "        s.explore_disc_rate = 0.05\n",
     "        \n",
     "    def set_brain_layers(s, layers):\n",
     "        s.brain.append(layers)\n",
@@ -408,8 +431,9 @@
     "    def choose_action(s, state):\n",
     "        if (random.random() < s.explore_prob): \n",
     "            action = s.env.action_space.sample() # explore\n",
+    "            s.explore_prob-=s.explore_disc_rate\n",
     "        else:\n",
-    "            action = s.brain.forward(state)\n",
+    "            action = s.brain.forward(state).argmax().item()\n",
     "            # this is where you would insert your policy\n",
     "            #action = 1 # right\n",
     "        return action\n",
@@ -418,92 +442,191 @@
     "        s.memory.append((prev_state, action, state, reward, terminated)) \n",
     "\n",
     "    def run_one_game(s):\n",
+    "        max_reward = 0\n",
+    "        reward_sum = 0\n",
     "        prev_state, info = s.env.reset() # seed=42\n",
-    "        s.memory.clear()\n",
+    "        prev_reward = 0\n",
+    "        \n",
+    "        \n",
     "        terminated = False\n",
     "        truncated = False\n",
     "        while (not terminated and not truncated):\n",
-    "            action = s.choose_action()\n",
+    "            action = s.choose_action(prev_state)\n",
     "            \n",
     "            state, reward, terminated, truncated, info = s.env.step(action) \n",
+    "\n",
+    "            reward_sum += reward\n",
     "            s.save_memory(prev_state, action, state, reward, terminated)\n",
     "            prev_state = state\n",
+    "            \n",
+    "            \n",
+    "        return reward_sum\n",
     "\n",
+    "    def optimize(s):\n",
+    "        last_brain = s.brain.deep_copy()\n",
     "\n",
-    "    def learn(s):\n",
-    "        epochs = 20\n",
+    "        batch = s.memory.get_sample(32)\n",
+    "        for state, action, new_state, reward, terminated in batch:\n",
+    "\n",
+    "            target = 0\n",
+    "            if terminated: \n",
+    "                target = reward\n",
+    "            else:\n",
+    "                expected = last_brain.forward(new_state).max()\n",
+    "                target = reward + s.reward_discount * expected\n",
+    "\n",
+    "            \n",
+    "            cur_res = s.brain.forward(state)\n",
+    "        \n",
+    "            # Adjust the specific action to the target that was just calculated\n",
+    "            target_res = last_brain.forward(state)\n",
+    "\n",
+    "            target_res[action] = target\n",
+    "\n",
+    "            s.brain.backprop(target_res)\n",
+    "            s.brain.update_w()\n",
+    "        \n",
+    "        \n",
+    "    def train(s):\n",
+    "        epochs = 500\n",
+    "        games_in_epoch = 400\n",
+    "        s.memory.clear()\n",
+    "\n",
+    "        mean_time_array=[]\n",
+    "        epochs_array=[]\n",
+    "        \n",
     "        for e in range(epochs):\n",
-    "            s.run_one_game()\n",
+    "            display_bar(bar_len, e, epochs)\n",
+    "           \n",
+    "            max_rew = 0\n",
+    "            reward_sum = 0\n",
     "            \n",
+    "            for g in range(games_in_epoch):\n",
+    "                #print(\"game: \", g, end='\\r')\n",
+    "                \n",
+    "                total_reward = s.run_one_game()\n",
+    "                #max_rew=max(max_rew, total_reward)\n",
+    "                reward_sum+=total_reward\n",
+    "                \n",
+    "                if (len(s.memory) > 32):\n",
+    "                    s.optimize()\n",
+    "                    s.memory.clear()\n",
+    "                    \n",
+    "            #print(\"mean reward: \", reward_sum/games_in_epoch)\n",
+    "            mean_val = reward_sum/games_in_epoch\n",
+    "            epochs_array.append(e)\n",
+    "            mean_time_array.append(mean_val)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "            \n",
-    "            "
+    "        plt.figure()\n",
+    "        plt.scatter(epochs_array, mean_time_array )\n",
+    "        plt.xlabel('epochs_array')\n",
+    "        plt.ylabel('mean_time_array')\n",
+    "        plt.title(\"mean/epoch\")\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "8a5426f5-9958-4716-91f5-bb8e8b95c7d3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "5cdf838c-c610-4f02-97bb-6cfa0c7c5ede",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "added succesfully\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "choose_action() missing 1 required positional argument: 'state'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[62], line 21\u001b[0m\n\u001b[0;32m     17\u001b[0m model \u001b[38;5;241m=\u001b[39m test_env(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCartPole-v1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     19\u001b[0m model\u001b[38;5;241m.\u001b[39mset_brain_layers(layers)\n\u001b[1;32m---> 21\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlearn\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     22\u001b[0m model\u001b[38;5;241m.\u001b[39mclose_env()\n",
-      "Cell \u001b[1;32mIn[61], line 45\u001b[0m, in \u001b[0;36mtest_env.learn\u001b[1;34m(s)\u001b[0m\n\u001b[0;32m     43\u001b[0m epochs \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m20\u001b[39m\n\u001b[0;32m     44\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m e \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(epochs):\n\u001b[1;32m---> 45\u001b[0m     \u001b[43ms\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_one_game\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[61], line 35\u001b[0m, in \u001b[0;36mtest_env.run_one_game\u001b[1;34m(s)\u001b[0m\n\u001b[0;32m     33\u001b[0m truncated \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m     34\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m (\u001b[38;5;129;01mnot\u001b[39;00m terminated \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m truncated):\n\u001b[1;32m---> 35\u001b[0m     action \u001b[38;5;241m=\u001b[39m \u001b[43ms\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchoose_action\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     37\u001b[0m     state, reward, terminated, truncated, info \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39menv\u001b[38;5;241m.\u001b[39mstep(action) \n\u001b[0;32m     38\u001b[0m     s\u001b[38;5;241m.\u001b[39msave_memory(prev_state, action, state, reward, terminated)\n",
-      "\u001b[1;31mTypeError\u001b[0m: choose_action() missing 1 required positional argument: 'state'"
+      "added succesfully\n",
+      "[ ---------------------------------------------- * --- ]\r"
      ]
     }
    ],
    "source": [
-    "np.random.seed(5)\n",
+    "#np.random.seed(5)\n",
+    "\n",
     "num_of_inputs = 4\n",
-    "hidden1 = 8\n",
-    "hidden2 = 8\n",
-    "#hidden3 = 5\n",
+    "hidden1 = 24 #some indian youtuber used this\n",
+    "hidden2 = 24\n",
     "out_n = 2\n",
     "\n",
-    "lr = 0.01\n",
+    "lr = 0.001\n",
     "\n",
     "\n",
     "layers = [input_layer(num_of_inputs), \n",
-    "          layer(lr = lr, prev_size = num_of_inputs, my_size=hidden1), \n",
-    "          layer(lr = lr, prev_size = hidden1, my_size=hidden2), \n",
-    "          layer(lr = lr, prev_size = hidden2, my_size=out_n)]\n",
+    "          layer(lr = lr, prev_size = num_of_inputs, my_size=hidden1), #, activation_type=\"ReLU\"), \n",
+    "          layer(lr = lr, prev_size = hidden1, my_size=hidden2), #, activation_type=\"ReLU\"), \n",
+    "          layer(lr = lr, prev_size = hidden2, my_size=out_n)] #, activation_type=\"ReLU\")]\n",
     "\n",
     "\n",
     "model = test_env('CartPole-v1')\n",
     "\n",
     "model.set_brain_layers(layers)\n",
+    "#model.brain.print_info()\n",
     "\n",
-    "model.learn()\n",
-    "model.close_env()\n"
+    "model.train()\n",
+    "model.close_env()\n",
+    "#model.brain.print_info()\n",
+    "print(\"done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7535754-2ff5-43fd-8709-591e8b3dd465",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.close_env()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "747970eb-985a-4aed-be42-20bdc6ec8769",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.env = gym.make('CartPole-v1', render_mode=\"human\")\n",
+    "# print(env.action_space) # 0 or 1\n",
+    "\n",
+    "state, info = model.env.reset(seed=42)\n",
+    "for _ in range(100):\n",
+    "   action = model.brain.forward(state).argmax().item()\n",
+    "   state, reward, terminated, truncated, info = model.env.step(action)\n",
+    "\n",
+    "   if terminated or truncated:\n",
+    "      observation, info = model.env.reset()\n",
+    "\n",
+    "model.env.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8287cf1-177e-4462-9da8-d2ee02e2233b",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# test1nn = plastic_nn()\n",
+    "# layers = [input_layer(2), \n",
+    "          \n",
+    "#           layer(lr = lr, prev_size = 2, my_size=1), \n",
+    "#           layer(lr = lr, prev_size = 1, my_size=1)]\n",
+    "\n",
+    "# test1nn.append(layers)\n",
+    "# test1nn.print_info()\n",
+    "\n",
+    "# test2nn = test1nn.deep_copy()\n",
+    "# test2nn.print_info()\n",
+    "# test2nn.append([layer(lr = lr, prev_size = 1, my_size=2)])\n",
+    "# test2nn.print_info()\n",
+    "# test1nn.print_info()"
    ]
   }
  ],
