--- a/give_me_RL.ipynb
+++ b/give_me_RL.ipynb
@@ -371,7 +371,7 @@
     "        pass\n",
     "\n",
     "    def forward(s, data):\n",
-    "        for lay in layers:\n",
+    "        for lay in s.layers:\n",
     "            data = lay.forward(data)\n",
     "        s.last_result = data\n",
     "        return s.last_result\n",
@@ -384,7 +384,7 @@
     "\n",
     "    def update_w(s):\n",
     "        cnt = 0\n",
-    "        for lay in reversed(layers[1:]):\n",
+    "        for lay in reversed(s.layers[1:]):\n",
     "            #print(cnt)\n",
     "            cnt+=1\n",
     "            lay.update_weights()\n",
