--- a/RL_for_real.ipynb
+++ b/RL_for_real.ipynb
@@ -71,7 +71,9 @@
   {
    "cell_type": "markdown",
    "id": "468c5cad-7cbb-487a-bdea-f04ecc392b21",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## actiovations and derivatives"
    ]
@@ -118,7 +120,9 @@
   {
    "cell_type": "markdown",
    "id": "b780d9eb-60d8-43a2-9b02-7f266b6dd665",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## layer"
    ]
