--- a/attempt3/test.ipynb
+++ b/attempt3/test.ipynb
@@ -374,46 +374,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 65,
    "id": "71956c2f-0661-4b8c-bc5d-245dd9dfe786",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "57\n",
+      "44\n",
+      "30\n",
+      "36\n",
+      "45\n",
+      "44\n",
+      "36\n",
+      "41\n",
+      "36\n",
+      "62\n",
+      "34\n",
+      "38\n",
+      "47\n",
+      "49\n",
+      "44\n",
+      "39\n",
+      "47\n",
+      "37\n",
+      "36\n",
+      "39\n",
+      "30\n",
+      "51\n",
+      "32\n",
+      "37\n",
+      "37\n",
+      "34\n",
+      "30\n",
+      "40\n",
+      "52\n",
+      "40\n",
+      "41\n",
+      "36\n",
+      "61\n",
+      "51\n",
+      "41\n",
+      "38\n",
+      "53\n",
+      "39\n",
+      "33\n",
+      "41\n",
+      "53\n",
+      "45\n",
+      "46\n",
+      "33\n",
+      "45\n",
+      "50\n",
+      "35\n",
+      "45\n",
+      "41\n",
+      "37\n"
+     ]
+    }
+   ],
+   "source": [
+    "mountaincar.test(50, 'CartPole_dql_last.pt') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "2073b7ef-0c7b-41f0-a116-0f9959851385",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42\n",
-      "51\n",
-      "52\n",
-      "64\n",
-      "45\n",
+      "32\n",
+      "20\n",
+      "13\n",
+      "17\n",
+      "11\n",
       "41\n",
-      "41\n",
-      "60\n",
-      "27\n",
-      "34\n"
-     ]
-    }
-   ],
-   "source": [
-    "mountaincar.test(10, 'CartPole_dql_last.pt') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "2073b7ef-0c7b-41f0-a116-0f9959851385",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'episodes' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[61], line 12\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[38;5;66;03m#policy_dqn.load_state_dict(torch.load(model_filepath))\u001b[39;00m\n\u001b[0;32m      9\u001b[0m policy_dqn\u001b[38;5;241m.\u001b[39meval()    \u001b[38;5;66;03m# switch model to evaluation mode\u001b[39;00m\n\u001b[1;32m---> 12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[43mepisodes\u001b[49m):\n\u001b[0;32m     13\u001b[0m     state, _ \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39mreset()\n\u001b[0;32m     14\u001b[0m     terminated \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m      \u001b[38;5;66;03m# True when agent falls in hole or reached goal\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'episodes' is not defined"
+      "23\n",
+      "13\n",
+      "16\n",
+      "17\n"
      ]
     }
    ],
@@ -421,7 +468,7 @@
     "env = gym.make('CartPole-v0', render_mode='human')\n",
     "num_states = 4 #env.observation_space.shape[0]\n",
     "num_actions = env.action_space.n\n",
-    "\n",
+    "episodes = 10\n",
     "\n",
     "# Load learned policy\n",
     "policy_dqn = DQN(in_states=num_states, h1_nodes=64, h2_nodes=64, out_actions=num_actions) \n",
@@ -436,12 +483,22 @@
     "    cnt = 0\n",
     "    while(not terminated and not truncated):  \n",
     "        with torch.no_grad():\n",
-    "            action = env.action_space().sample() #policy_dqn(self.state_to_dqn_input(state)).argmax().item()\n",
+    "            action = env.action_space.sample() #policy_dqn(self.state_to_dqn_input(state)).argmax().item()\n",
     "\n",
     "        # Execute action\n",
     "        state,reward,terminated,truncated,_ = env.step(action)\n",
     "        cnt+=1\n",
     "    print(cnt)\n",
+    "env.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "71ba9074-50a0-47c5-bb24-7236d9dc48d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "env.close()"
    ]
   }
